Bug 153381 - can not drag'n'drop on the breadcrumb-locationbar
Summary: can not drag'n'drop on the breadcrumb-locationbar
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-03 22:37 UTC by jos poortvliet
Modified: 2009-12-07 08:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jos poortvliet 2007-12-03 22:37:55 UTC
Version:           unknown (using KDE 3.96.1 (KDE 4.0 >= 20071120), compiled sources)
Compiler:          gcc
OS:                Linux (i686) release 2.6.23-ARCH

When holding a file above the breadcrumb bar (be it in Gwenview, dolphin or another app), it shows a droptarget/plus sign/whatever it's called but if you let go, the file is NOT copied. BTW it would be cool if the breadcrumb parts would open, like springloading folders...
Comment 1 jos poortvliet 2007-12-03 22:39:06 UTC
And I'd also like to say this bugreport was filed with konqi from KDE 4 ;-)

Spellcheck shows wrongly spelled words red, but offers no right mouse options for replacements... :(

Yet, I really feel we're getting there!
Comment 2 jos poortvliet 2007-12-09 12:44:38 UTC
And this has been fixed, except for the springloading part - guess I should file a wish for that. And so I will ;-)
Comment 3 jos poortvliet 2007-12-09 12:48:51 UTC
meh, re-opening, sorry. It does work fine in dolphin, but not in gwenview... Does each app have to implement this themselves?
Comment 4 FiNeX 2009-09-26 01:18:29 UTC
It is still valid on the current trunk version of gwenview.
Comment 5 Aurelien Gateau 2009-12-07 00:23:57 UTC
SVN commit 1059570 by gateau:

Allow dropping over url navigator

BUG:153381

 M  +23 -0     thumbnailviewpanel.cpp  
 M  +4 -0      thumbnailviewpanel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1059570
Comment 6 jos poortvliet 2009-12-07 08:21:44 UTC
Thanks for fixing!