Allow dropping over url navigator

BUG:153381

svn path=/trunk/KDE/kdegraphics/gwenview/; revision=1059570